Ozhaev Zaynudin Sharik4.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:23:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float dx1 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:24:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float dy1 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:25:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float dx2 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:26:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float dy2 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:41:14: error: 'vx1' was not declared in this scope
              vx1 = -vx1;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:47:14: error: 'vy1' was not declared in this scope
              vy1 = -vy1;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:53:14: error: 'vx1' was not declared in this scope
              vx1 = -vx1;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:59:14: error: 'vy1' was not declared in this scope
              vy1 = -vy1;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:73:14: error: 'vx2' was not declared in this scope
              vx2 = -vx2;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:79:14: error: 'vy2' was not declared in this scope
              vy2 = -vy2;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:85:14: error: 'vx2' was not declared in this scope
              vx2 = -vx2;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:91:14: error: 'vy2' was not declared in this scope
              vy2 = -vy2;
              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:34: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:51: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:104:26: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt > 0.6) dt = 0.6;
                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:105:27: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt < -0.6) dt = -0.6;
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:29: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:41: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:46: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:138:44: error: 'vx1' was not declared in this scope
         if (txGetAsyncKeyState (VK_RIGHT)) vx1++;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:139:44: error: 'vx1' was not declared in this scope
         if (txGetAsyncKeyState (VK_LEFT))  vx1--;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:140:44: error: 'vy1' was not declared in this scope
         if (txGetAsyncKeyState (VK_UP))    vy1--;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:141:44: error: 'vy1' was not declared in this scope
         if (txGetAsyncKeyState (VK_DOWN))  vy1++;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:143:44: error: 'vy1' was not declared in this scope
         if (txGetAsyncKeyState (VK_SPACE)) vy1 = vx1 = 0;
                                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:143:50: error: 'vx1' was not declared in this scope
         if (txGetAsyncKeyState (VK_SPACE)) vy1 = vx1 = 0;
                                                  ^
---------------------------------------------------------------------------------------------
[09.06.2021 17:29:45,06 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
